--- a/Greedy/AIR_GROUP_10052016.tex
+++ b/Greedy/AIR_GROUP_10052016.tex
@@ -35,13 +35,17 @@ In general is the time complexity of the algorithm  $O(b^{l})$ and the space com
 % Kiran
 
 \subsection{Informed Search}
-The expression informed search is the generic term for search algorithms which use problem-specific knowledge to find solutions more efficient. This types of searches are also called heurisitic searches. Informed searches use their knowledge to build an evaluation function. The function evaluates if it is worth to expand the node to find the goal.
+The expression informed search is the generic term for search algorithms which use problem-specific knowledge to find solutions more efficient. This types of searches are also called heurisitic searches. \\
+\\
+Informed searches use their knowledge to build an evaluation function. The function evaluates if it is worth to expand the node based on the costs, which have to be paid to reach the node and at the end the goal. The approach of choosing the most suitable way first is called best-first search. The evaluation function of lots of algorithms, which fit into the definition of a best-first search, contain a part which is called heuristic function. This function itself gives the estimated cost of the cheapest path from a node n to the goal node.
 
 \subsection{Greedy Search}
 % Kiran
 
 \subsection{A*}
-% Patrick
+The A* search is the most famous search using the best-first approach. It was found 1968 by Peter Hart, Nils J. Nilsson and Bertram Raphael and contains as many other \textbf{best-first} search a heuristic function ($h(n)$). Together with a function, which gives the costs to reach a node ($g(n)$), it builds the evaluation function of the A* search: $f(n) = g(n) + h(n)$. In words the evaluation function $f(n)$ means the estimated cost of the chepeast solution through n.\\
+\\
+The algorithm finds always the best solution if such a  solution is given at all. Thus it is \textbf{optimal}. Furthermore the search is \textbf{complete} unless there are infinity nodes with $f(n) <= f(G)$. The complexity of the search is in the best case $O(d)$ and in worst case it is $O$ of the entire state space.
 
 \subsection{Iterative A*}
 % Kiran
